logs/turtlesim/build.make.002.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In constructor ‘turtlesim::Turtle::Turtle(const ros::NodeHandle&, const QImage&, const QPointF&, float)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:60:53: error: ‘poseCallback’ is not a member of ‘turtlesim::Turtle’
   pose_sub=nh_.subscribe("\turtlepose", 1, &Turtle::poseCallback, this);
                                                     ^~~~~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: At global scope:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:65:70: error: no ‘void turtlesim::Turtle::poseCallback(const ConstPtr&)’ member function declared in class ‘turtlesim::Turtle’
 void Turtle::poseCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                      ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
